Fest: added the top destination and completed the landing page structure

--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,7 @@ font-size:16px;
 
 /*********************app****************/
 #app {
-background-image: url(../img/1.jpg);
+background-image: url(../img/a.png);
 background-position: center;
 }
 /*********************app_end****************/
