Fest: polished the about us page

--- a/css/contact.css
+++ b/css/contact.css
@@ -12,7 +12,7 @@ background-image: url(../img/33.jpg);
 background-position: center;
 }
 .main_about{
-background-image: url(../img/43.jpg);
+background-image: url(../img/1000.png);
 background-position: center;
 }
 .about_pg1li1i1 {
